--- a/Portfolio Figma/Assets/Styles/experience.css
+++ b/Portfolio Figma/Assets/Styles/experience.css
@@ -73,4 +73,8 @@
     .experience-list li {
         padding: 15px 20px;
     }
+    .lay2 {
+        width: 200px;
+        height: 100px;
+    }
 }
